test/scc/type/semantic-errors/007.a
007.t:7:9: error: incomplete type is not allowed